--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2012-05-31  Niibe Yutaka  <gniibe@fsij.org>
 
+	* polarssl-0.14.0/library/rsa.c (rsa_pkcs1_verify): BUF size is
+	256 (was: 1024).
 	* src/call-rsa.c (rsa_verify): It's SIG_RSA_SHA1.
 	* src/openpgp.c (cmd_external_authenticate): Follow the change of
 	rsa_verify.
