--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2012-06-01  Niibe Yutaka  <gniibe@fsij.org>
+
+	USB bug fixes.
+	* src/usb_ctrl.c (gnuk_usb_event): Bug fix for handling
+	USB_EVENT_CONFIG.  Do nothing when current_conf == value.
+	* src/usb_lld.c (std_clear_feature): Bug fix.  Always clear DTOG.
+	(usb_lld_init): New argument for FEATURE.
+
 2012-05-31  Niibe Yutaka  <gniibe@fsij.org>
 
 	* polarssl-0.14.0/library/rsa.c (rsa_pkcs1_verify): BUF size is
