--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-04  Niibe Yutaka  <gniibe@fsij.org>
+
+	* regnual/regnual.c (regnual_ctrl_write_finish): Bug fix.
+
 2012-06-01  Niibe Yutaka  <gniibe@fsij.org>
 
 	Support firmware update with public key authentication.
