--- a/AUTHORS
+++ b/AUTHORS
@@ -37,32 +37,39 @@ NIIBE Yutaka:
     Wrote a tool for Gnuk:
 	tool/gnuk_put_binary.py
 	tool/gnuk_put_binary_libusb.py
+	tool/gnuk_remove_keys.py
+	tool/gnuk_upgrade.py
     Wrote a tool for USB Hub:
 	tool/hub_ctrl.py
-    Wrote:
+    Wrote a tool for testing card reader with pinpad:
+	tool/pinpadtest.py
+    Wrote reGNUal implementation:
+	regnual/regnual.c
+	regnual/sys.c
+    Wrote Gnuk implementation:
 	gnuk.svg
 	src/configure
 	src/ac.c
-	src/main.c
-	src/usb_lld.h
-	src/gnuk.h
-	src/usb_lld.c
-	src/usb-icc.c
-	src/openpgp-do.c
-	src/flash.c
-	src/debug.c
-	src/usb_desc.c
-	src/usb-cdc-vport.c
-	src/hardclock.c
-	src/openpgp.h
-	src/openpgp.c
 	src/call-rsa.c
-	src/random.c
+	src/debug.c
+	src/flash.c
+	src/gnuk.h
+	src/main.c
+	src/neug.c
+	src/openpgp-do.c
+	src/openpgp.c
+	src/openpgp.h
 	src/pin-cir.c
 	src/pin-dial.c
 	src/pin-dnd.c
-	src/usb_msc.c
-	src/usb_msc.h
-	src/neug.c
+	src/random.c
+	src/sys.c
+	src/usb-icc.c
+	src/usb-msc.c
+	src/usb-msc.h
+	src/usb_ctrl.c
+	src/usb_desc.c
+	src/usb_lld.c
+	src/usb_lld.h
 	*
 	and others.
