--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,13 @@ Gnuk NEWS - User visible changes
 
   Released 2012-XX-XX, by NIIBE Yutaka
 
+** LED display output change
+LED display output by Gnuk is now more reactive.  It shows status code
+when it gets GET_STATUS message of CCID.  When you communicate Gnuk by
+internal CCID driver of GnuPG (instead of PC/SC), and enable
+'debug-disable-ticker' option in .gnupg/scdaemon.conf, it is more
+silent now.
+
 ** Key generation feature added
 Finally, key generation is supported.  Note that it may be very slow.
 It will take a few minutes (or more) to generate two or three keys,
