--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2012-07-04  Niibe Yutaka  <gniibe@fsij.org>
+
+	Bug fixes.
+	* src/ac.c (verify_admin_0): Compare PW_LEN and BUF_LEN.
+
+	* src/openpgp-do.c (gpg_do_chks_prvkey): Set do_ptr to NULL before
+	calling flash_do_write (which might cause GC).
+	(gpg_do_put_data, gpg_do_write_simple): Likewise.
+
+	* src/openpgp.c (cmd_reset_user_password): Write to
+	DO_KEYSTRING_PW1.
+
 2012-07-03  Niibe Yutaka  <gniibe@fsij.org>
 
 	* test/features/040_passphrase_change.feature: New.
