--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,11 @@
 Gnuk NEWS - User visible changes
 
-* Major changes in Gnuk 1.0
+* Major changes in Gnuk 0.21
 
-  Released 2012-0X-XX, by NIIBE Yutaka
+  Released 2012-07-06, by NIIBE Yutaka
 
 ** Test suite
+A functinality test suite is added under test/ directory.
 
 ** New tool: stlinkv2.py
 This tool is SWD flash ROM writer with ST-Link/V2.
