--- a/test/README
+++ b/test/README
@@ -1,4 +1,4 @@
-This is functionality test suite for Gnuk.
+This is a functionality test suite for Gnuk.
 
 You need python-nose, python-freshen as well as python-usb.
 
@@ -17,4 +17,4 @@ or
 to run the test suite.
 
 To skip tests for key generation, add an option "--tag ~keygen".  To
-stop running tests after the first error or failure, add "--stop option".
+stop running tests after the first error or failure, add "--stop" option.
