--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2012-07-09  Niibe Yutaka  <gniibe@fsij.org>
 
+	* tool/stlinkv2.py (stlinkv2.setup_gpio): Fix GPIOB_CRL.
+
 	* test/rsa_keys.py (integer_to_bytes_256): Rename from
 	integer_to_bytes and it should be exactly 256-byte long.
 
